# bibcitex

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Dioxus.toml  Justfile  NOTICE  README.md  TODO.md  build.rs  deno.json  index.html  input.tailwind.css  package-lock.json  package.json  tailwind.css  tailwind.input.css
.github/workflows/: release.yml
.zed/: settings.json
assets/: tailwind.css
assets/icons/: icon.icns
assets/styling/: bib.css  helper.css  hover.css  main.css  modal.css  nav.css  reference.css
bibcitex-core/: Cargo.toml
bibcitex-core/benches/: bibliography2references.rs
bibcitex-core/src/: bib.rs  error.rs  filter.rs  lib.rs  msc.rs  search.rs  setting.rs  utils.rs
crates/bibcitex-core/: Cargo.toml
crates/bibcitex-core/src/: filter.rs  lib.rs
crates/nspanel/: Cargo.toml
crates/nspanel/src/: lib.rs  panel.rs
crates/updater/: Cargo.toml
crates/updater/src/: builder.rs  config.rs  error.rs  github.rs  lib.rs  linux.rs  macos.rs  updater.rs  utils.rs  windows.rs
crates/xpaste/: Cargo.toml
crates/xpaste/src/: lib.rs  linux.rs  macos.rs  windows.rs
data/: msc.csv
icon/: README.md  logo.py  main.py  pyproject.toml
icon-gen/: README.md  logo.py  pyproject.toml
nspanel/: Cargo.toml
nspanel/src/: lib.rs  panel.rs
prompts/: CLAUDE.md  prompt.md
src/: lib.rs  main.rs  route.rs  utils.rs
src/components/: bibliography.rs  database.rs  helper.rs  math.rs  mod.rs  reference.rs  updater.rs
src/components/helper/: article.rs  book.rs  booklet.rs  inbook.rs  incollection.rs  inproceeding.rs  misc.rs  mod.rs  search.rs  selector.rs  techreport.rs  thesis.rs  unimplemented.rs
src/components/reference/: article.rs  book.rs  booklet.rs  chunks_comp.rs  inbook.rs  incollection.rs  inproceedings.rs  misc.rs  mod.rs  selector.rs  techreport.rs  thesis.rs  unimplemented.rs
src/platform/macos/: builder.rs  common.rs  event.rs
src/tests/: mod.rs  test_math.rs
src/views/: detail.rs  helper.rs  home.rs  mod.rs  nav.rs  reference.rs  references.rs  update.rs  updater.rs
