[workspace]
members = [".", "bibcitex-core"]

[workspace.package]
version = "0.1.0"
authors = ["tangxiangong <tangxiangong@gmail.com>"]
edition = "2024"
description = "A BibTeX citation tool"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
arboard = "3.6"
bibcitex-core = { path = "bibcitex-core" }
biblatex = "0.10"
chrono = { version = "0.4", features = ["serde"] }
config = "0.15"
dioxus = { version = "0.7.0-rc.0", features = ["desktop", "router"] }
dioxus-core = "0.7.0-rc.0"
dirs = "6.0.0"
enigo = "0.5"
fs-err = "3.1"
image = "0.25"
itertools = "0.14"
katex-gdef-v8 = { version = "0.1", default-features = false, features = [
    "qjs",
] }
once_cell = "1.21"
opener = "0.8"
rayon = "1"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

[package]
name = "BibCiTeX"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
arboard = { workspace = true }
bibcitex-core = { workspace = true }
biblatex = { workspace = true }
dioxus = { workspace = true }
dirs = { workspace = true }
enigo = { workspace = true }
image = { workspace = true }
itertools = { workspace = true }
katex-gdef-v8 = { workspace = true }
once_cell = { workspace = true }
opener = { workspace = true }
rfd = { workspace = true }
tokio = { workspace = true }
[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6.2"
objc2-app-kit = "0.3.1"
objc2-foundation = "0.3.1"
[target."cfg(target_os = \"windows\")".dependencies]
windows-sys = { version = "0.60.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
[target."cfg(target_os = \"linux\")".dependencies]
x11 = "2"

[target."cfg(target_os = \"windows\")".build-dependencies]
winresource = "0.1"

[features]
windows-bundle = []

[lib]
name = "bibcitex_ui"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
