[workspace]
members = [".", "crates/*"]

[workspace.package]
version = "0.5.3"
authors = ["tangxiangong <tangxiangong@gmail.com>"]
edition = "2024"
description = "A BibTeX citation tool"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
arboard = "3.6"
bibcitex-core = { path = "crates/bibcitex-core" }
biblatex = "0.11"
chrono = { version = "0.4", features = ["serde"] }
config = "0.15"
dioxus = { version = "0.7", features = ["desktop", "router"] }
dioxus-core = "0.7"
dirs = "6.0.0"
enigo = "0.6"
fs-err = "3.1"
futures-util = "0.3"
http = "1"
image = "0.25"
itertools = "0.14"
katex-gdef-v8 = { version = "0.1", default-features = false, features = [
    "qjs",
] }
octocrab = "0.47"
once_cell = "1.21"
opener = "0.8"
rayon = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "stream",
] }
rfd = "0.15"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }
updater = { path = "crates/updater" }
url = { version = "2", features = ["serde"] }
xpaste = { path = "crates/xpaste" }

[package]
name = "BibCiTeX"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
arboard = { workspace = true }
bibcitex-core = { workspace = true }
biblatex = { workspace = true }
dioxus = { workspace = true }
dirs = { workspace = true }
enigo = { workspace = true }
image = { workspace = true }
itertools = { workspace = true }
katex-gdef-v8 = { workspace = true }
once_cell = { workspace = true }
opener = { workspace = true }
rfd = { workspace = true }
semver = { workspace = true }
tokio = { workspace = true }
updater = { workspace = true }
url = { workspace = true }
xpaste = { workspace = true }

[target."cfg(target_os = \"windows\")".build-dependencies]
winresource = "0.1"

[features]
windows-bundle = []

[lib]
name = "bibcitex_ui"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
