[package]
name = "bibcitex-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
biblatex = { workspace = true }
config = { workspace = true }
dirs = { workspace = true }
fs-err = { workspace = true }
opener = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
