[package]
name = "bibcitex-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
biblatex = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
dirs = { workspace = true }
fs-err = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = "0.6"

[[bench]]
name = "bibliography2references"
harness = false
