[package]
name = "updater"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
futures-util = { workspace = true }
http = { workspace = true }
infer = { workspace = true }
octocrab = "0.44"
percent-encoding = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
zip = { version = "4", default-features = false, features = ["deflate", "bzip2", "time"]}

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[target."cfg(target_os = \"windows\")".dependencies]
windows-sys = { version = "0.60.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
] }


[target."cfg(target_os = \"linux\")".dependencies]
dirs = { workspace = true }
flate2 = { version = "1" }
tar = { version = "0.4" }

[target."cfg(target_os = \"macos\")".dependencies]
flate2 = "1"
osakit = { version = "0.3", features = ["full"] }
tar = "0.4"
