[package]
name = "updater"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
futures-util = { workspace = true }
http = { workspace = true }
octocrab = "0.44"
reqwest = { workspace = true }
semver = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[target."cfg(target_os = \"windows\")".dependencies]
windows-sys = { version = "0.60.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
] }

[target."cfg(target_os = \"macos\")".dependencies]
flate2 = "1"
osakit = { version = "0.3", features = ["full"] }
zip = { version = "4", default-features = false, features = [
    "deflate",
    "bzip2",
    "time",
] }
