[package]
name = "xpaste"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
enigo = { workspace = true }

[target."cfg(target_os = \"macos\")".dependencies]
objc2-app-kit = "0.3.1"
[target."cfg(target_os = \"windows\")".dependencies]
windows-sys = { version = "0.60.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
[target."cfg(target_os = \"linux\")".dependencies]
x11 = "2"
