[package]
name = "xpaste"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
enigo = { workspace = true }

[target."cfg(target_os = \"macos\")".dependencies]
objc2-app-kit = "0.3.2"
[target."cfg(target_os = \"windows\")".dependencies]
windows = { version = "0.62.2", features = [
    "Win32_UI_Accessibility",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
